# agent-switch

./: .gitignore  ADOPTED.md  EXTENSION-ANALYSIS.md  LICENSE  NON-GOALS.md  README.md  Taskfile.yml  package-lock.json  package.json
agents/: roadmaps-progress.md
gui/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/capabilities/: default.json
gui/src-tauri/icons/: icon.icns
gui/src-tauri/src/: ac.rs  main.rs  pty.rs
scripts/: dev-link.sh  pack-gui-platform.mjs  prepack-check.mjs  release.mjs
src/: agy-keychain.ts  api.ts  apps.ts  args.ts  codex-reset.ts  codex-usage.ts  credentials.ts  daemon.ts  doctor.ts  gui-launch.ts  handoff.ts  history.ts  hooks.ts  index.ts  keychain.ts  locks.ts  mappings.ts  notifications.ts  notify.ts  os-notify.ts  profiles.ts  providers.ts  service.ts  session-preview.ts  sessions.ts  settings-inherit.ts  share.ts  shellenv.ts  telemetry.ts  tmux.ts  tokens.ts  tooling.ts  updates.ts  usage.ts
starlight/: astro.config.mjs  package-lock.json  package.json
tests/: api.test.ts  apps.test.ts  args.test.ts  cli-e2e.test.ts  codex-reset.test.ts  codex-usage.test.ts  credentials.test.ts  daemon-context.test.ts  daemon.test.ts  gui-launch.test.ts  handoff.test.ts  history.test.ts  hooks.test.ts  integration.test.ts  keychain.test.ts  locks.test.ts  mappings.test.ts  migration.test.ts  notifications.test.ts  notify.test.ts  os-notify.test.ts  profiles.test.ts  providers.test.ts  release-workflow.test.ts  service.test.ts  session-preview.test.ts  sessions.test.ts  settings-inherit.test.ts  share.test.ts  shellenv.test.ts  telemetry.test.ts  tmux.test.ts  tokens.test.ts  tooling.test.ts  updates.test.ts  usage-history.test.ts  (+1 more)
(+124 files in other folders)
