[package]
name = "agent-switch-gui"
version = "1.7.0"
description = "agent-switch tray/menubar GUI"
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-autostart = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
# Loopback HTTP to the agent-config local server only (plain http, no TLS
# needed). Blocking client — every call runs on the blocking pool (ac.rs).
ureq = { version = "2", default-features = false }

[profile.release]
strip = true
lto = true
